added html and css to test

--- a/resume.html
+++ b/resume.html
@@ -43,9 +43,9 @@
         </div>
       <div id="navbar" class="collapse navbar-collapse navbar-right">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Work</a></li>
+            <li><a href="index.html">Work</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li class="active"><a href="resume.html">Resume</a></li>
             <!--
             <li class="dropdown">
               <a href="#" class="dropdown-toggle dropdown"  data-hover="dropdown" role="button" aria-expanded="false">Test Dropdown <span class="caret"></span></a>
@@ -64,77 +64,9 @@
 
 
   <div class="container">
-      <div class="row work">
+      <div class="row">
         <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/lotsa-pasta.png" alt="Lotsa Pasta">
-          </a>
-        </div>
 
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/free-rent.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/dollars.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/safelink.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/clifford-geertz.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/sudan-floods.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/china-graph.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/wendell.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/caferrari.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/water.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/antonia.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/when-they-call-me.png" alt="Lotsa Pasta">
-          </a>
         </div>
       </div>
   </div>
