--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!-- HOME PAGE -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -39,13 +39,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Karly Nelson</a>
+          <a class="navbar-brand" href="/">Karly Nelson</a>
         </div>
       <div id="navbar" class="collapse navbar-collapse navbar-right">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li class="active"><a href="/">Work</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="resume/">Resume</a></li>
             <!--
             <li class="dropdown">
               <a href="#" class="dropdown-toggle dropdown"  data-hover="dropdown" role="button" aria-expanded="false">Test Dropdown <span class="caret"></span></a>
