--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,4 @@
-
+<!-- RESUME -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,10 +13,10 @@
     <title>Karly Nelson</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="/css/custom.css" rel="stylesheet">
 
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
@@ -39,13 +39,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Karly Nelson</a>
+          <a class="navbar-brand" href="/">Karly Nelson</a>
         </div>
       <div id="navbar" class="collapse navbar-collapse navbar-right">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li class="active"><a href="resume.html">Resume</a></li>
+            <li><a href="/">Work</a></li>
+            <li><a href="#">About</a></li>
+            <li class="active"><a href="index.html">Resume</a></li>
             <!--
             <li class="dropdown">
               <a href="#" class="dropdown-toggle dropdown"  data-hover="dropdown" role="button" aria-expanded="false">Test Dropdown <span class="caret"></span></a>
@@ -63,15 +63,7 @@
     </nav>
 
 
-  <div class="container">
-      <div class="row">
-        <div class="col-sm-6 col-md-4">
-
-        </div>
-      </div>
-  </div>
-
-
+  
 
 
     <!-- Bootstrap core JavaScript
