--- a/index.html
+++ b/index.html
@@ -2,153 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
     <title>Karly Nelson</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/custom.css" rel="stylesheet">
-
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href=# rel="stylesheet">
   </head>
 
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Karly Nelson</a>
-        </div>
-      <div id="navbar" class="collapse navbar-collapse navbar-right">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Work</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="resume/">Resume</a></li>
-            <!--
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle dropdown"  data-hover="dropdown" role="button" aria-expanded="false">Test Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li> <a href="#">Dropdown List Item</a>
-                <li> <a href="#">Dropdown List Item</a>
-                <li> <a href="#">Dropdown List Item</a>
-              </ul>
-            </li>
-             -->
-          </ul>
 
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
+    <h1> Goodbye, cruel world! </h1>
 
-
-  <div class="container">
-      <div class="row work">
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/lotsa-pasta.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/free-rent.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/dollars.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/safelink.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/clifford-geertz.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/sudan-floods.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/china-graph.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/wendell.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/caferrari.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/water.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/antonia.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-          <a href="#" class="thumbnail">
-            <img src="images/when-they-call-me.png" alt="Lotsa Pasta">
-          </a>
-        </div>
-      </div>
-  </div>
-
-
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap-hover-dropdown.min.js"></script>
   </body>
+
 </html>
