--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <link href=# rel="stylesheet">
   </head>
 
-  <body>
-
-    <h1> Goodbye, cruel world! </h1>
-
+  <body style="background-image: url('http://i.giphy.com/GsaGeoyPw24ww.gif');">
   </body>
-
 </html>
