--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        /*opacity: .8;*/
       }
 
       h1 {
@@ -98,6 +99,11 @@
       }
 
       @media (max-width: 500px) {
+
+        body {
+          color: white;
+        }
+
         h1 {
           margin-top: 5rem;
           font-size: 4rem;
