fixed mobile underline

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
           font-size: 4rem;
         }
 
-        a::after {
-          width: 100%;
+        a {
+          text-decoration: underline;
         }
       }
 
