changed background position of bg img

--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
         left: 0;
         overflow: hidden;
         background-image: url(images/tree.gif);
-        background-position: center;
+        /*background-position: center;*/
         background-repeat: no-repeat;
         background-size: cover;
-        /*opacity: .8;*/
       }
 
       h1 {
