--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../../favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700" rel="stylesheet"> -->
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <title>Karly Nelson</title>
     <style>
       body {
         text-align: center;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Noto Sans', sans-serif;
         font-size: 16px;
         background-color: #414846;
         color: rgba(255, 255, 255, .8);
@@ -48,7 +49,7 @@
       }
 
       h1 {
-        font-family: 'Permanent Marker', monospace;
+        font-family: 'Poppins', sans-serif;
         font-size: 6rem;
         margin-bottom: 2rem;
         margin-top: 10rem;
