--- a/index.html
+++ b/index.html
@@ -14,123 +14,16 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../../favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-
     <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Karly Nelson</title>
-    <style>
-      body {
-        text-align: center;
-        font-family: 'Noto Sans', sans-serif;
-        font-size: 16px;
-        background-color: #414846;
-        color: rgba(255, 255, 255, .8);
-        font-weight: 300;
-        padding: .5rem;
-        margin: 0;
-        position: relative;
-      }
-
-      .bg-img {
-        position: absolute;
-        z-index: -1;
-        width: 100%;
-        height: 100%;
-        min-height: 100vh;
-        top: 0;
-        left: 0;
-        overflow: hidden;
-        background-image: url(images/tree.gif);
-        /*background-position: center;*/
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
-
-      h1 {
-        font-family: 'Poppins', sans-serif;
-        font-size: 6rem;
-        margin-bottom: 2rem;
-        margin-top: 10rem;
-        color: white;
-        line-height: 1;
-      }
-
-      h2 {
-        font-size: 1.5rem;
-        font-weight: 300;
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      ul {
-        list-style: none;
-        padding-left: 0;
-      }
-
-      li {
-        display: inline-block;
-      }
-
-      p {
-        margin-top: 2rem;
-        font-size: 1.25rem;
-      }
-
-      a {
-        color: white;
-        text-decoration: none;
-        font-weight: bold;
-        display: inline-block;
-        position: relative;
-      }
-
-      a::after {
-        transition: all ease 300ms;
-        content: '';
-        height: 3px;
-        width: 0%;
-        position: absolute;
-        bottom: -3px;
-        left: 0;
-        right: 0;
-        background: white;
-      }
-
-      a:hover,
-      a:focus {
-        outline: none;
-      }
-
-      a:hover::after,
-      a:focus::after {
-        width: 100%;
-      }
-
-      @media (max-width: 500px) {
-
-        body {
-          color: white;
-        }
-
-        h1 {
-          margin-top: 5rem;
-          font-size: 4rem;
-        }
-
-        a {
-          text-decoration: underline;
-        }
-      }
-
-    </style>
   </head>
 
   <body>
     <h1>Karly Nelson</h1>
     <h2>I'm a St. Louis-based User Experience Designer and Front-end Developer at <a target="_blank" href="http://www.asynchrony.com">Asynchrony Labs</a>. I make websites and mobile apps, design logos, do some woodburning, and shoot the occasional video.</h2>
     <p>Find me on <a target="_blank" class="linkedin" href="https://www.linkedin.com/in/karlynelson">LinkedIn</a>, <a target="_blank" class="dribbble" href="https://dribbble.com/KarlyANelson">Dribbble</a>, and <a target="_blank" class="github" href="https://github.com/karlyanelson">Github</a>, or email me at <a target="_blank" href="mailto:karlyanelson@gmail.com">karlyanelson@gmail.com</a></p>
-    <div class="bg-img"></div>
+    <div class="bg-img bg-img-home"></div>
   </body>
 </html>
