use html5 video instead of gifs

--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../../favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
     <title>Karly Nelson</title>
   </head>
 
   <body>
-    <h1>Karly Nelson</h1>
-    <h2>I'm a St. Louis-based User Experience Designer and Front-end Developer at <a target="_blank" href="http://www.asynchrony.com">Asynchrony Labs</a>. I make websites and mobile apps, design logos, do some woodburning, and shoot the occasional video.</h2>
+    <h1>Hi! </br> I'm Karly Nelson</h1>
+    <h2>I'm a St. Louis-based User Experience Designer and Front-end Developer at <a target="_blank" href="https://www.wwt.com/">World Wide Technology</a>. I make websites and mobile apps, do some woodburning, and shoot the occasional video.</h2>
     <p>Find me on <a target="_blank" class="linkedin" href="https://www.linkedin.com/in/karlynelson">LinkedIn</a>, <a target="_blank" class="dribbble" href="https://dribbble.com/KarlyANelson">Dribbble</a>, and <a target="_blank" class="github" href="https://github.com/karlyanelson">Github</a>, or email me at <a target="_blank" href="mailto:karlyanelson@gmail.com">karlyanelson@gmail.com</a></p>
-    <div class="bg-img bg-img-home"></div>
+    <video class="bg-img" autoplay loop muted playsinline>
+      <source src="https://media.giphy.com/media/l4hLU0BjSbMbDdVoA/giphy.mp4" type="video/mp4">
+    </video>
   </body>
 </html>
