--- a/404.html
+++ b/404.html
@@ -15,14 +15,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="../../favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
     <title>Karly Nelson</title>
   </head>
 
   <body>
+    <p>
+      <a href="/">Karly Nelson</a>
+    </p>
     <h1>Lost in space</h1>
     <h2>The page you were looking for either does not exist </br> or was cast into the void.</h2>
-    <div class="bg-img bg-img-404"></div>
+    <video class="bg-img" autoplay loop muted playsinline>
+      <source src="https://media.giphy.com/media/TZf4ZyXb0lXXi/giphy.mp4" type="video/mp4">
+    </video>
   </body>
 </html>
