wrapped content in main tag

--- a/404.html
+++ b/404.html
@@ -21,13 +21,16 @@
   </head>
 
   <body>
-    <p>
-      <a href="/">Karly Nelson</a>
-    </p>
-    <h1>Lost in space</h1>
-    <h2>The page you were looking for either does not exist </br> or was cast into the void.</h2>
-    <video class="bg-img" autoplay loop muted playsinline>
-      <source src="https://media.giphy.com/media/TZf4ZyXb0lXXi/giphy.mp4" type="video/mp4">
-    </video>
+    <main>
+      <p>
+        <a href="/">Karly Nelson</a>
+      </p>
+      <h1>Lost in space</h1>
+      <h2>The page you were looking for either does not exist </br> or was cast into the void.</h2>
+
+      <video class="bg-img" autoplay loop muted playsinline>
+        <source src="https://media.giphy.com/media/TZf4ZyXb0lXXi/giphy.mp4" type="video/mp4">
+      </video>
+    </main>
   </body>
 </html>
