--- a/404.html
+++ b/404.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
     <title>Karly Nelson</title>
+    <meta name="Description" content="The page you were looking for either does not exist or was cast into the void.">
   </head>
 
   <body>
