--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
     <title>Karly Nelson</title>
-    <meta name="Description" content="Hi! I'm Karly Nelson - a St. Louis-based UX Designer and Front-end Developer">
+    <meta name="Description" content="Hi! I'm Karly Nelson - a St. Louis-based UX Designer and Front-end Developer at WWT">
   </head>
 
   <body>
