--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     </script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="../../favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
     <title>Karly Nelson</title>
     <meta name="Description" content="Hi! I'm Karly Nelson - a St. Louis-based UX Designer and Front-end Developer at WWT">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <!-- My cool favicons -->
+    <link rel="icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
