--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <body>
     <main>
       <h1>Hi! </br> I'm Karly Nelson</h1>
-      <h2>I'm a St. Louis-based User Experience Designer and Front-end Developer at <a target="_blank" rel="noopener" href="https://www.wwt.com/">World Wide Technology</a>. I make websites and mobile apps, do some woodburning, and shoot the occasional video.</h2>
-      <p>
+      <p class="intro">I'm a St. Louis-based User Experience Designer and Front-end Developer at <a target="_blank" rel="noopener" href="https://www.wwt.com/">World Wide Technology</a>. I make websites and mobile apps, do some woodburning, and shoot the occasional video.</p>
+      <p class="links">
         Find me on <a target="_blank" rel="noopener" class="linkedin" href="https://www.linkedin.com/in/karlynelson">LinkedIn</a>,
         <a target="_blank" rel="noopener" class="dribbble" href="https://dribbble.com/KarlyANelson">Dribbble</a>,
         and <a target="_blank" rel="noopener" class="github" href="https://github.com/karlyanelson">Github</a>,
