--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/styles.css">
     <title>Karly Nelson</title>
     <meta name="Description" content="Hi! I'm Karly Nelson - a St. Louis-based UX Designer and Front-end Developer at WWT">
     <!-- My cool favicons -->
