--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <main>
       <h1>Hi! </br> I'm Karly Nelson</h1>
-      <p class="intro">I'm a St. Louis-based User Experience Designer and Front-end Developer at <a target="_blank" rel="noopener" href="https://www.wwt.com/">World Wide Technology</a>. I make websites and mobile apps, do some woodburning, and shoot the occasional video.</p>
+      <p class="intro">I'm a St. Louis-based UX Designer at <a target="_blank" rel="noopener" href="https://www.wwt.com/">World Wide Technology</a>. I make websites, mobile apps, and a pretty sweet cheese board.</p>
       <p class="links">
         Find me on <a target="_blank" rel="noopener" class="linkedin" href="https://www.linkedin.com/in/karlynelson">LinkedIn</a>,
         <a target="_blank" rel="noopener" class="dribbble" href="https://dribbble.com/KarlyANelson">Dribbble</a>,
@@ -40,7 +40,7 @@
         or email me at <a target="_blank" rel="noopener" href="mailto:karlyanelson@gmail.com">karlyanelson@gmail.com</a>
       </p>
       <video class="bg-img" autoplay loop muted playsinline>
-        <source src="https://media.giphy.com/media/l4hLU0BjSbMbDdVoA/giphy.mp4" type="video/mp4">
+        <source src="https://media.giphy.com/media/TnDoEoXfT7YoE/giphy.mp4" type="video/mp4">
       </video>
     </main>
   </body>
