--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="../../favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/styles.css">
     <title>Karly Nelson</title>
     <meta name="Description" content="The page you were looking for either does not exist or was cast into the void.">
 
