--- a/404.html
+++ b/404.html
@@ -31,12 +31,10 @@
 
   <body>
     <main>
-      <p>
-        <a href="/">Karly Nelson</a>
-      </p>
+      <a class="link-home" href="/">Karly Nelson</a>
       <h1>Lost in space</h1>
-      <h2>The page you were looking for either does not exist </br> or was cast into the void.</h2>
-
+      <p class="intro">The page you were looking for either does not exist </br> or was cast into the void.</p>
+      <a class="link-home" href="/">Go to home page</a>
       <video class="bg-img" autoplay loop muted playsinline>
         <source src="https://media.giphy.com/media/TZf4ZyXb0lXXi/giphy.mp4" type="video/mp4">
       </video>
