--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="../../favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles.css">
+    <!-- <link rel="stylesheet" href="assets/styles.css"> -->
     <title>Karly Nelson</title>
     <meta name="Description" content="The page you were looking for either does not exist or was cast into the void.">
 
@@ -27,6 +27,109 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <style>
+        body {
+          text-align: center;
+          font-family: 'Noto Sans', sans-serif;
+          font-size: 16px;
+          background-color: #000;
+          color: rgba(255, 255, 255, .8);
+          font-weight: 400;
+          padding: .5rem;
+          margin: 0;
+          position: relative;
+        }
+  
+        .bg-img {
+          position: fixed;
+          z-index: -1;
+          top: 0;
+          left: 0;
+          min-width: 100%;
+          min-height: 100%;
+          opacity: .5;
+        }
+  
+        h1 {
+          font-family: 'Poppins', sans-serif;
+          font-size: 6rem;
+          margin-bottom: 2rem;
+          margin-top: 10rem;
+          color: white;
+          line-height: 1;
+        }
+  
+        .intro {
+          font-size: 1.5rem;
+          font-weight: 300;
+          max-width: 800px;
+          margin: 0 auto;
+        }
+  
+        .link-home {
+          margin: 1rem;
+        }
+  
+        ul {
+          list-style: none;
+          padding-left: 0;
+        }
+  
+        li {
+          display: inline-block;
+        }
+  
+        .links {
+          margin-top: 2rem;
+          font-size: 1.25rem;
+        }
+  
+        a {
+          color: rgba(255, 255, 255, 1);
+          text-decoration: none;
+          font-weight: 700;
+          display: inline-block;
+          position: relative;
+        }
+  
+        a::after {
+          transition: all ease 300ms;
+          content: '';
+          height: 3px;
+          width: 0%;
+          position: absolute;
+          bottom: -3px;
+          left: 0;
+          right: 0;
+          background: white;
+        }
+  
+        a:hover::after,
+        a:focus::after {
+          width: 100%;
+        }
+  
+  
+        @media (max-width: 500px) {
+  
+          body {
+            color: white;
+          }
+  
+          h1 {
+            margin-top: 5rem;
+            font-size: 4rem;
+          }
+  
+          a {
+            text-decoration: underline;
+          }
+  
+          a::after {
+            display: none;
+          }
+        }
+      </style>
   </head>
 
   <body>
