--- a/index.html
+++ b/index.html
@@ -2,23 +2,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114689351-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-114689351-1');
-    </script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="assets/styles.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/styles.css">
     <title>Karly Nelson</title>
     <meta name="Description" content="Hi! I'm Karly Nelson - a St. Louis-based UX Designer and Front-end Developer at WWT">
-    <!-- My cool favicons -->
+    <!-- favicons -->
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -27,110 +16,6 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-
-    <style>
-      body {
-        text-align: center;
-        font-family: 'Noto Sans', sans-serif;
-        font-size: 16px;
-        background-color: #000;
-        color: rgba(255, 255, 255, .8);
-        font-weight: 400;
-        padding: .5rem;
-        margin: 0;
-        position: relative;
-      }
-
-      .bg-img {
-        position: fixed;
-        z-index: -1;
-        top: 0;
-        left: 0;
-        min-width: 100%;
-        min-height: 100%;
-        opacity: .5;
-      }
-
-      h1 {
-        font-family: 'Poppins', sans-serif;
-        font-size: 6rem;
-        margin-bottom: 2rem;
-        margin-top: 10rem;
-        color: white;
-        line-height: 1;
-      }
-
-      .intro {
-        font-size: 1.5rem;
-        font-weight: 300;
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      .link-home {
-        margin: 1rem;
-      }
-
-      ul {
-        list-style: none;
-        padding-left: 0;
-      }
-
-      li {
-        display: inline-block;
-      }
-
-      .links {
-        margin-top: 2rem;
-        font-size: 1.25rem;
-      }
-
-      a {
-        color: rgba(255, 255, 255, 1);
-        text-decoration: none;
-        font-weight: 700;
-        display: inline-block;
-        position: relative;
-      }
-
-      a::after {
-        transition: all ease 300ms;
-        content: '';
-        height: 3px;
-        width: 0%;
-        position: absolute;
-        bottom: -3px;
-        left: 0;
-        right: 0;
-        background: white;
-      }
-
-      a:hover::after,
-      a:focus::after {
-        width: 100%;
-      }
-
-
-      @media (max-width: 500px) {
-
-        body {
-          color: white;
-        }
-
-        h1 {
-          margin-top: 5rem;
-          font-size: 4rem;
-        }
-
-        a {
-          text-decoration: underline;
-        }
-
-        a::after {
-          display: none;
-        }
-      }
-    </style>
   </head>
 
   <body>
@@ -147,5 +32,15 @@
         <source src="https://media.giphy.com/media/TnDoEoXfT7YoE/giphy.mp4" type="video/mp4">
       </video>
     </main>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-114689351-1"></script>
+    <script defer>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-114689351-1');
+    </script>
   </body>
 </html>
