use background images from unsplash

--- a/index.html
+++ b/index.html
@@ -28,9 +28,23 @@
         and <a target="_blank" rel="noopener" class="github" href="https://github.com/karlyanelson">Github</a>,
         or email me at <a target="_blank" rel="noopener" href="mailto:karlyanelson@gmail.com">karlyanelson@gmail.com</a>
       </p>
-      <video class="bg-img" autoplay loop muted playsinline>
+      <!-- <video class="bg-img" autoplay loop muted playsinline>
         <source src="https://media.giphy.com/media/TnDoEoXfT7YoE/giphy.mp4" type="video/mp4">
-      </video>
+      </video> -->
+      <img
+        loading="lazy"
+        class="bg-img"
+        alt=""
+        srcset="
+        https://source.unsplash.com/collection/9373262/400x225 400w,
+        https://source.unsplash.com/collection/9373262/800x450 800w,
+        https://source.unsplash.com/collection/9373262/1200x675 1200w,
+        https://source.unsplash.com/collection/9373262/1600x900 1600w,
+        https://source.unsplash.com/collection/9373262/2400x1350 2400w
+        "
+        src="https://source.unsplash.com/collection/9373262/1200x675" 
+      >
+
     </main>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
