--- a/404.html
+++ b/404.html
@@ -24,9 +24,21 @@
       <h1>Lost in space</h1>
       <p class="intro">The page you were looking for either does not exist </br> or was cast into the void.</p>
       <a class="link-home" href="/">Go to home page</a>
-      <video class="bg-img" autoplay loop muted playsinline>
-        <source src="https://media.giphy.com/media/TZf4ZyXb0lXXi/giphy.mp4" type="video/mp4">
-      </video>
+      <!-- <img
+      loading="lazy"
+      class="bg-img"
+      srcset="
+      https://source.unsplash.com/400x225/?nature,space 400w,
+      https://source.unsplash.com/800x450/?nature,space 800w,
+      https://source.unsplash.com/1200x675/?nature,space 1200w,
+      https://source.unsplash.com/1600x900/?nature,space 1600w,
+      https://source.unsplash.com/2400x1350/?nature,space 2400w
+      "
+      src="https://source.unsplash.com/featured/?nature,space" 
+    > -->
+    <video class="bg-img" autoplay loop muted playsinline>
+      <source src="https://media.giphy.com/media/TZf4ZyXb0lXXi/giphy.mp4" type="video/mp4">
+    </video>
     </main>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
