added footer giving credit to unsplash for image

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         "
         src="https://source.unsplash.com/collection/9373262/1200x675" 
       >
-
     </main>
+    <footer>Background photo is from <a href="https://unsplash.com/" target="_blank" rel="noopener">Unsplash</a></footer>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-114689351-1"></script>
