added accessible controls to 404 page to control background animation; use image instead when reduce motion is enabled

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <main>
       <h1>Hi! </br> I'm Karly Nelson</h1>
-      <p class="intro">I'm a St. Louis-based UX Designer at <a target="_blank" rel="noopener" href="https://www.wwt.com/">World Wide Technology</a>. I make websites, mobile apps, and a pretty sweet cheese board.</p>
+      <p class="intro">I'm a St. Louis-based UX Designer at <a target="_blank" rel="noopener" href="https://www.wwt.com/">World Wide Technology</a>. </br> I make websites, mobile apps, and a pretty sweet cheese board.</p>
       <p class="links">
         Find me on <a target="_blank" rel="noopener" class="linkedin" href="https://www.linkedin.com/in/karlynelson">LinkedIn</a>,
         <a target="_blank" rel="noopener" class="dribbble" href="https://dribbble.com/KarlyANelson">Dribbble</a>,
