--- a/404.html
+++ b/404.html
@@ -24,22 +24,26 @@
       <h1>Lost in space</h1>
       <p class="intro">The page you were looking for either does not exist </br> or was cast into the void.</p>
       <a class="link-home" href="/">Go to home page</a>
-      <!-- <img
-      loading="lazy"
-      class="bg-img"
-      srcset="
-      https://source.unsplash.com/400x225/?nature,space 400w,
-      https://source.unsplash.com/800x450/?nature,space 800w,
-      https://source.unsplash.com/1200x675/?nature,space 1200w,
-      https://source.unsplash.com/1600x900/?nature,space 1600w,
-      https://source.unsplash.com/2400x1350/?nature,space 2400w
-      "
-      src="https://source.unsplash.com/featured/?nature,space" 
-    > -->
-    <video class="bg-img" autoplay loop muted playsinline>
-      <source src="https://media.giphy.com/media/TZf4ZyXb0lXXi/giphy.mp4" type="video/mp4">
-    </video>
+      <video class="bg-img bg-gif" autoplay loop muted playsinline>
+        <source src="https://media.giphy.com/media/TZf4ZyXb0lXXi/giphy.mp4" type="video/mp4">
+      </video>
+      <img
+        loading="lazy"
+        class="bg-img no-motion-img"
+        alt=" "
+        srcset="
+        https://source.unsplash.com/400x225/?nature,space 400w,
+        https://source.unsplash.com/800x450/?nature,space 800w,
+        https://source.unsplash.com/1200x675/?nature,space 1200w,
+        https://source.unsplash.com/1600x900/?nature,space 1600w,
+        https://source.unsplash.com/2400x1350/?nature,space 2400w
+        "
+        src="https://source.unsplash.com/1200x675/?nature,space" 
+      >
     </main>
+    <footer>
+      <button class="pause-gif" id="pauseButton" type="button">Pause animation</button>
+    </footer>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-114689351-1"></script>
@@ -49,6 +53,40 @@
       gtag('js', new Date());
 
       gtag('config', 'UA-114689351-1');
+    </script>
+    <script defer>
+      /*!
+      * Run event after DOM is ready
+      * (c) 2017 Chris Ferdinandi, MIT License, https://gomakethings.com
+      * @param  {Function} fn Callback function
+      */
+      const ready = function (fn) {
+          // Sanity check
+          if (typeof fn !== 'function') return;
+
+          // If document is already loaded, run method
+          if (document.readyState === 'interactive' || document.readyState === 'complete') {
+              return fn();
+          }
+
+          // Otherwise, wait until document is loaded
+          document.addEventListener('DOMContentLoaded', fn, false);
+      };
+
+      const pauseGif = function() {
+        var gif = document.querySelector('video');
+        var pauseButton = document.querySelector('#pauseButton');
+        pauseButton.onclick = function() {
+          gif.pause();
+          pauseButton.remove();
+        }
+      }
+
+      // Run the function when the document is ready
+      ready(function() {
+          pauseGif();
+      });
+
     </script>
   </body>
 </html>
