--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
   <body>
     <main>
       <h1>Hi! </br> I'm Karly Nelson</h1>
-      <p class="intro">I'm a St. Louis-based UX Designer at <a target="_blank" rel="noopener" href="https://www.wwt.com/">World Wide Technology</a>. </br> I make websites, mobile apps, and a pretty sweet cheese board.</p>
+      <p class="intro">I'm a UX Designer at <a target="_blank" rel="noopener" href="https://www.wwt.com/">World Wide Technology</a> in St. Louis. </br> I make websites, mobile apps, and a pretty sweet cheese board.</p>
       <p class="links">
         Find me on <a target="_blank" rel="noopener" class="linkedin" href="https://www.linkedin.com/in/karlynelson">LinkedIn</a>,
         <a target="_blank" rel="noopener" class="dribbble" href="https://dribbble.com/KarlyANelson">Dribbble</a>,
-        and <a target="_blank" rel="noopener" class="github" href="https://github.com/karlyanelson">Github</a>,
-        or email me at <a target="_blank" rel="noopener" href="mailto:karlyanelson@gmail.com">karlyanelson@gmail.com</a>
+        and <a target="_blank" rel="noopener" class="github" href="https://github.com/karlyanelson">Github</a>.
       </p>
       <!-- <video class="bg-img" autoplay loop muted playsinline>
         <source src="https://media.giphy.com/media/TnDoEoXfT7YoE/giphy.mp4" type="video/mp4">
@@ -34,7 +33,7 @@
       <img
         loading="lazy"
         class="bg-img"
-        alt=" "
+        alt=""
         srcset="
         https://source.unsplash.com/collection/9373262/400x225 400w,
         https://source.unsplash.com/collection/9373262/800x450 800w,
