--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="./assets/styles.css">
     <title>Karly Nelson</title>
     <meta name="Description" content="Hi! I'm Karly Nelson - a St. Louis-based UX Designer and Front-end Developer at WWT">
     <!-- favicons -->
