got rid of images, add light and dark theme

--- a/404.html
+++ b/404.html
@@ -3,10 +3,8 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles.css">
-    <title>Karly Nelson</title>
-    <meta name="Description" content="The page you were looking for either does not exist or was cast into the void.">
+    <meta charset="UTF-8">
+    <meta name="Description" content="Hi, I'm Karly Nelson. I'm a UX Designer at World Wide Technology in St. Louis.">
     <!-- favicons -->
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
@@ -16,34 +14,17 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles.css">
   </head>
 
   <body>
     <main>
       <a class="link-home" href="/">Karly Nelson</a>
-      <h1>Lost in space</h1>
-      <p class="intro">The page you were looking for either does not exist </br> or was cast into the void.</p>
+      <h1>Oops! <span role="image" aria-label="Sad emoji.">😓</span></h1>
+      <p class="intro">The page you were looking for either doesn't exist or was deleted.</p>
       <a class="link-home" href="/">Go to home page</a>
-      <video class="bg-img bg-gif" autoplay loop muted playsinline>
-        <source src="https://media.giphy.com/media/TZf4ZyXb0lXXi/giphy.mp4" type="video/mp4">
-      </video>
-      <img
-        loading="lazy"
-        class="bg-img no-motion-img"
-        alt=" "
-        srcset="
-        https://source.unsplash.com/400x225/?nature,space 400w,
-        https://source.unsplash.com/800x450/?nature,space 800w,
-        https://source.unsplash.com/1200x675/?nature,space 1200w,
-        https://source.unsplash.com/1600x900/?nature,space 1600w,
-        https://source.unsplash.com/2400x1350/?nature,space 2400w
-        "
-        src="https://source.unsplash.com/1200x675/?nature,space" 
-      >
     </main>
-    <footer>
-      <button class="pause-gif" id="pauseButton" type="button">Pause animation</button>
-    </footer>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-114689351-1"></script>
