--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/styles.css">
     <title>Karly Nelson</title>
-    <meta name="Description" content="Hi! I'm Karly Nelson - a St. Louis-based UX Designer and Front-end Developer at WWT">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="Description" content="Hi, I'm Karly Nelson. I'm a UX Designer at World Wide Technology in St. Louis.">
     <!-- favicons -->
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
@@ -16,35 +15,20 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles.css">
   </head>
 
   <body>
     <main>
-      <h1>Hi! </br> I'm Karly Nelson</h1>
-      <p class="intro">I'm a UX Designer at <a target="_blank" rel="noopener" href="https://www.wwt.com/">World Wide Technology</a> in St. Louis. </br> I make websites, mobile apps, and a pretty sweet cheese board.</p>
+      <h1>Hi! I'm Karly Nelson</h1>
+      <p class="intro">I'm a UX Designer at <a target="_blank" rel="noopener" href="https://www.wwt.com/">World Wide Technology</a> in St. Louis. I make websites, mobile apps, and a pretty sweet cheese board.</p>
       <p class="links">
         Find me on <a target="_blank" rel="noopener" class="linkedin" href="https://www.linkedin.com/in/karlynelson">LinkedIn</a>,
         <a target="_blank" rel="noopener" class="dribbble" href="https://dribbble.com/KarlyANelson">Dribbble</a>,
         and <a target="_blank" rel="noopener" class="github" href="https://github.com/karlyanelson">Github</a>.
       </p>
-      <!-- <video class="bg-img" autoplay loop muted playsinline>
-        <source src="https://media.giphy.com/media/TnDoEoXfT7YoE/giphy.mp4" type="video/mp4">
-      </video> -->
-      <img
-        loading="lazy"
-        class="bg-img"
-        alt=""
-        srcset="
-        https://source.unsplash.com/collection/9373262/400x225 400w,
-        https://source.unsplash.com/collection/9373262/800x450 800w,
-        https://source.unsplash.com/collection/9373262/1200x675 1200w,
-        https://source.unsplash.com/collection/9373262/1600x900 1600w,
-        https://source.unsplash.com/collection/9373262/2400x1350 2400w
-        "
-        src="https://source.unsplash.com/collection/9373262/1200x675" 
-      >
     </main>
-    <footer>Background photo is from <a href="https://unsplash.com/" target="_blank" rel="noopener">Unsplash</a></footer>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script defer src="https://www.googletagmanager.com/gtag/js?id=UA-114689351-1"></script>
