--- a/index.html
+++ b/index.html
@@ -3,30 +3,62 @@
 <html lang="en">
   <head>
     <title>Karly Nelson</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8">
-    <meta name="Description" content="Hi, I'm Karly Nelson. I'm a UX Designer at World Wide Technology in St. Louis.">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta
+      name="Description"
+      content="Hi, I'm Karly Nelson. I'm a Front End Engineer at World Wide Technology in St. Louis."
+    />
     <!-- favicons -->
-    <link rel="icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
 
   <body>
     <main>
       <h1>Hi! I'm Karly Nelson</h1>
-      <p class="intro">I'm a UX Designer at <a target="_blank" rel="noopener" href="https://www.wwt.com/">World Wide Technology</a> in St. Louis. I make websites, mobile apps, and a pretty sweet cheese board.</p>
+      <p class="intro">
+        I'm a Front End Engineer at
+        <a target="_blank" rel="noopener" href="https://www.wwt.com/"
+          >World Wide Technology</a
+        >
+        in St. Louis. I make websites, mobile apps, and a pretty sweet cheese
+        board.
+      </p>
       <p class="links">
-        Find me on <a target="_blank" rel="noopener" class="linkedin" href="https://www.linkedin.com/in/karlynelson">LinkedIn</a>,
-        <a target="_blank" rel="noopener" class="dribbble" href="https://dribbble.com/KarlyANelson">Dribbble</a>,
-        and <a target="_blank" rel="noopener" class="github" href="https://github.com/karlyanelson">Github</a>.
+        Find me on
+        <a
+          target="_blank"
+          rel="noopener"
+          class="linkedin"
+          href="https://www.linkedin.com/in/karlynelson"
+          >LinkedIn</a
+        >,
+        <a
+          target="_blank"
+          rel="noopener"
+          class="dribbble"
+          href="https://dribbble.com/KarlyANelson"
+          >Dribbble</a
+        >, and
+        <a
+          target="_blank"
+          rel="noopener"
+          class="github"
+          href="https://github.com/karlyanelson"
+          >Github</a
+        >.
       </p>
     </main>
   </body>
