--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <main>
       <h1>Hi! I'm Karly Nelson</h1>
       <p class="intro">
-        I'm a Front End Engineer at
-        <a target="_blank" rel="noopener" href="https://www.wwt.com/"
-          >World Wide Technology</a
+        I'm a Senior Software Engineer at
+        <a target="_blank" rel="noopener" href="https://lworks.io/"
+          >Ledger Works</a
         >
-        in St. Louis. I make websites, mobile apps, and a pretty sweet cheese
-        board.
+        in St. Louis. I design and make web apps, mobile apps, and a pretty
+        sweet cheese board.
       </p>
       <p class="links">
         Find me on
