--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles.css" />
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-88TSRYR9CT"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-88TSRYR9CT");
+    </script>
   </head>
 
   <body>
