add no referrer

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1>Hi! I'm Karly Nelson</h1>
       <p class="intro">
         I'm a Senior Software Engineer at
-        <a target="_blank" rel="noopener" href="https://lworks.io/"
+        <a target="_blank" rel="noopener noreferrer" href="https://lworks.io/"
           >Ledger Works</a
         >
         in St. Louis. I design and make web apps, mobile apps, and a pretty
